# lkeep_fastapi_vue

./: .env.sample  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_01_01_2318-f5845d46e95b_create_user_table.py
lkeep_fastapi/: main.py
lkeep_fastapi/apps/: __init__.py
lkeep_fastapi/apps/auth/: __init__.py  auth.py  auth_backend.py  manager.py  utils.py
lkeep_fastapi/core/: database.py  settings.py
lkeep_fastapi/core/models/: __init__.py  user.py
